2007-11-06  Jb Evain  <jbevain@novell.com>

	* main.c: Don't crash when a referenced assembly cannot be
	found. Fix #323943.

2007-11-05  Jackson Harper  <jackson@ximian.com>

	* declsec.c (declsec_20_write_type): support for strings.

2007-10-02  Jb Evain  <jbevain@novell.com>

	* declsec.c (declsec_20_write_type): support for bools.

2007-09-22  Zoltan Varga  <vargaz@gmail.com>

	* main.c (dis_property_signature): Remove some calls to mono_metadata_free_type ().

	* get.c (get_type): Ditto.	

Mon Jul 16 19:45:42 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* get.c: mono_get_inflated_method () is obsolete, removed.

2007-06-15  Raja R Harinath  <rharinath@novell.com>

	* get.c (dis_stringify_object_with_class): Update to changes in
	MonoGenericClass.
	(dis_stringify_type): Likewise.

2007-06-05  Rodrigo Kumpera  <kumpera@gmail.com>

	* get.c: Support for variance related generics modifiers: <+T> and <-T>

2007-03-22  Jb Evain  <jbevain@gmail.com>

	* dump.c, dump.h, main.c: Implement dumping of Strings
	and UserStrings heap.

2007-03-13  Jonathan Chambers  <joncham@gmail.com>

	* monodis.vcproj: Move to msvc directory.
	
2007-03-13  Jonathan Chambers  <joncham@gmail.com>

	* monodis.vcproj: Begin Win64 port.
	
Fri Jan 26 12:30:22 CET 2007 Paolo Molaro <lupus@ximian.com>

	* get.c, dis-cil.c: warning fixes.

Wed Jan 17 17:26:08 CET 2007 Paolo Molaro <lupus@ximian.com>

	* main.c: if a file can't be loaded as an assembly, load it as a
	modules, so monodis can be used also for netmodules.

2007-01-04  Raja R Harinath  <rharinath@novell.com>

	* get.c (get_method_core): Pick generic container from the
	declaring method.

2006-12-27  Raja R Harinath  <rharinath@novell.com>

	Avoid MonoGenericContext
	* dis-cil.c, dump.c, get.c, get.h, main.c: Replace all instances
	of MonoGenericContext with MonoGenericContainer, except for calls
	to mono_class_get_full and mono_get_method_full.  Use a top-down
	pass to propagate the original argument type from 'dis_method_list'.
